# pcl-experiments

./: README.md
NARF_range_image/data/: table_scene_mug_stereo_textured_plane.pcd
PCLVisualizer/: pcl_visualizer_demo.cpp
border_detection/: CMakeLists.txt  range_image_border_extraction.cpp
cloud_viewer/: CMakeCache.txt  CMakeLists.txt  Makefile  cloud_viewer  cloud_viewer.cpp  cmake_install.cmake
cloud_viewer/data/: capture_00.pcd
colored_cloud_viewer/: CMakeLists.txt
cylinder_model_segmentataion/: cylinder_segmentation.cpp
data/: small_model.ply  small_model_2.ply
hypothesis_verification_3d_recog/: global_hypothesis_verification.cpp
keypoint_extractor/: narf_keyboard_extraction.cpp
matrix_transform/: matrix_transform.cpp
openni_change_viewer/: CMakeLists.txt  openni_change_viewer.cpp
openni_frame_capture/: openni_grabber.cpp
openni_grabber/: openni_grabber.cpp
openni_grabber_copy/: openni_grabber.cpp
passthrough_filter/src/: PCL_passthrough_filter.cpp
people_detector/src/: main_ground_based_people_detection.cpp
save_cloud_pcd/: CMakeLists.txt  main.cpp
spin_image/: CMakeLists.txt
spin_image/src/: PCL_spin_image.cpp
test_cloud_viewer/: main.cpp
voxel_grid/: voxel_grid.cpp
