cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(OPENNI_CHANGE_VIEWER)
find_package(PCL 1.2 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(openni_change_viewer openni_change_viewer.cpp)
target_link_libraries(openni_change_viewer ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES})
